# open_nsafe

./: .gitignore  MANIFEST.in  README.md  app_streamlit.py  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
open_nsafe/: inventory.py  plotting.py
tests/: inventory_test.py  main_test.py  plot_test.py  test_inventory.py
