[metadata]
name = open_nsafe
version = 0.0.1
author = Steven C. Bradnam
author_email = steve.bradnam@ukaea.uk
description = An open data visualisation repository developed for nuclear safeguards applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbradnam/open_nsafe

[options]
packages =
    open_nsafe

python_requires = >=3.9
install_requires =
    pypact

include_package_data = True

[options.packages.find]
where = open_nsafe

[options.package_data]
# Include any *.txt files found in the resources package (but not in its
# subpackages):
* = *.txt

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    isort
